--- a/themes/cactus/languages/en.yml
+++ b/themes/cactus/languages/en.yml
@@ -4,7 +4,7 @@ nav:
   articles: Writing
   tag: Tag
   category: Category
-  projects: Projects
+  projects: Github
   search: Search
 
 icons:
@@ -20,7 +20,7 @@ index:
   enum_and: and
   articles: Writing
   projects: Projects
-  topics: Topics
+  topics: Tags
   most_recent: Most recent
 
 post:
